--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -13,7 +13,6 @@
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     display: flex;
     justify-content: center;
-    align-items: center;
     visibility: hidden;
     opacity: 0;
     transition: visibility 0.3s, opacity 0.6s, transform 0.5s;
@@ -60,13 +59,19 @@
   .navigation__container {
     flex-direction: column;
     background-color: #202020;
-    height: 100vh;
+    height: 1024px;
   }
 }
 
 @media screen and (max-width: 640px) {
   .navigation__container {
     min-width: 100%;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .navigation__container {
+    height: 780px;
   }
 }
 
@@ -81,24 +86,39 @@
     display: flex;
     flex-direction: column;
     margin-top: 159px;
+    gap: 24px;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .navigation__wrap {
+    margin-top: 144px;
+    gap: 20px;
   }
 }
 
 .navigation__main-link {
   display: none;
-  text-align: center;
-  margin: auto;
-  text-decoration: none;
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 22px;
-  color: #fff;
-  transition: 0.3s opacity;
 }
 
 @media screen and (max-width: 830px) {
   .navigation__main-link {
     display: inline;
+    text-align: center;
+    margin: 0 auto;
+    padding-bottom: 4px;
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 22px;
+    color: #fff;
+    transition: 0.3s opacity;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .navigation__main-link {
+    padding-bottom: 5px;
   }
 }
 
@@ -135,6 +155,7 @@
 
 @media screen and (max-width: 830px) {
   .navigation__link_active {
+    padding-bottom: 4px;
     border-bottom: solid 2px #fff;
   }
 }
@@ -158,6 +179,12 @@
 @media screen and (max-width: 830px) {
   .navigation__profile-link {
     margin-bottom: 92px;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .navigation__profile-link {
+    margin-bottom: 48px;
   }
 }
 
