--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -1,4 +1,4 @@
-.aboutProject {
+.about-project {
   box-sizing: border-box;
   background-color: #202020;
   width: 100%;
@@ -11,20 +11,20 @@
 }
 
 @media screen and (max-width: 830px) {
-  .aboutProject {
+  .about-project {
     min-height: 585px;
     padding: 0 50px;
   }
 }
 
 @media screen and (max-width: 520px) {
-  .aboutProject {
+  .about-project {
     min-height: 641px;
     padding: 0 18px;
   }
 }
 
-.aboutProject__title {
+.about-project__title {
   width: 50%;
   min-height: auto;
   margin: 110px 0 0 0;
@@ -32,23 +32,24 @@
   line-height: 27px;
   font-weight: 400;
   color: #fff;
+  letter-spacing: -4%;
 }
 
 @media screen and (max-width: 830px) {
-  .aboutProject__title {
+  .about-project__title {
     margin-top: 90px;
   }
 }
 
 @media screen and (max-width: 520px) {
-  .aboutProject__title {
+  .about-project__title {
     margin-top: 70px;
     font-size: 18px;
     line-height: 22px;
   }
 }
 
-.aboutProject__line {
+.about-project__line {
   width: 100%;
   height: 1px;
   margin: 23px 0 70px;
@@ -56,12 +57,12 @@
 }
 
 @media screen and (max-width: 520px) {
-  .aboutProject__line {
+  .about-project__line {
     margin: 28px 0 60px;
   }
 }
 
-.aboutProject__wrap {
+.about-project__wrap {
   width: 100%;
   margin: 0;
   column-count: 2;
@@ -69,19 +70,19 @@
 }
 
 @media screen and (max-width: 830px) {
-  .aboutProject__wrap {
+  .about-project__wrap {
     column-gap: 30px;
   }
 }
 
 @media screen and (max-width: 520px) {
-  .aboutProject__wrap {
+  .about-project__wrap {
     min-height: 328px;
     column-count: 1;
   }
 }
 
-.aboutProject__column-subtitle {
+.about-project__column-subtitle {
   margin: 0;
   font-size: 20px;
   line-height: 24px;
@@ -91,13 +92,13 @@
 }
 
 @media screen and (max-width: 520px) {
-  .aboutProject__column-subtitle {
+  .about-project__column-subtitle {
     font-size: 18px;
     line-height: 22px;
   }
 }
 
-.aboutProject__column-text {
+.about-project__column-text {
   margin: 26px 0 0;
   font-size: 14px;
   line-height: 20px;
@@ -106,7 +107,7 @@
 }
 
 @media screen and (max-width: 830px) {
-  .aboutProject__column-text {
+  .about-project__column-text {
     margin-top: 22px;
     font-size: 12px;
     line-height: 18px;
@@ -114,7 +115,7 @@
 }
 
 @media screen and (max-width: 520px) {
-  .aboutProject__column-text {
+  .about-project__column-text {
     margin-top: 16px;
     font-size: 11px;
     line-height: 16px;
@@ -122,7 +123,7 @@
   }
 }
 
-.aboutProject__scale {
+.about-project__scale {
   width: 100%;
   display: grid;
   grid-template-rows: repeat(2, 36px);
@@ -131,20 +132,20 @@
 }
 
 @media screen and (max-width: 830px) {
-  .aboutProject__scale {
+  .about-project__scale {
     margin-top: 93px;
   }
 }
 
 @media screen and (max-width: 520px) {
-  .aboutProject__scale {
+  .about-project__scale {
     margin-top: 4px;
     grid-template-rows: repeat(2, 35px);
     grid-template-columns: 100px auto;
   }
 }
 
-.aboutProject__scale-backend {
+.about-project__scale-backend {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -156,13 +157,13 @@
 }
 
 @media screen and (max-width: 520px) {
-  .aboutProject__scale-backend {
+  .about-project__scale-backend {
     font-size: 11px;
     line-height: 13px;
   }
 }
 
-.aboutProject__scale-frontend {
+.about-project__scale-frontend {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -174,17 +175,18 @@
 }
 
 @media screen and (max-width: 520px) {
-  .aboutProject__scale-frontend {
+  .about-project__scale-frontend {
     font-size: 11px;
     line-height: 13px;
   }
 }
 
-.aboutProject__scale-caption {
+.about-project__scale-caption {
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: #202020;
+  margin-top: 5px;
   font-size: 14px;
   line-height: 17px;
   font-weight: 400;
@@ -192,13 +194,13 @@
 }
 
 @media screen and (max-width: 830px) {
-  .aboutProject__scale-caption {
+  .about-project__scale-caption {
     color: #a0a0a0;
   }
 }
 
 @media screen and (max-width: 520px) {
-  .aboutProject__scale-caption {
+  .about-project__scale-caption {
     font-size: 11px;
     line-height: 13px;
   }
