--- a/src/components/BurgerMenu/BurgerMenu.css
+++ b/src/components/BurgerMenu/BurgerMenu.css
@@ -1,49 +1,70 @@
-.burgerMenu {
+.burger-menu {
   display: none;
-  width: 44px;
-  height: 44px;
-  z-index: 200;
-  transition: 0.3s opacity;
 }
 
 @media screen and (max-width: 830px) {
-  .burgerMenu {
+  .burger-menu {
     display: block;
+    width: 44px;
+    height: 44px;
+    z-index: 200;
+    transition: 0.3s opacity;
   }
 }
 
-.burgerMenu:hover {
+@media screen and (max-width: 520px) {
+  .burger-menu {
+    width: 40px;
+    height: 43px;
+  }
+}
+
+.burger-menu:hover {
   opacity: 0.7;
 }
 
-.burgerMenu__open {
-  width: 44px;
-  height: 44px;
-  padding: 0;
-  border: none;
-  background-image: url('../../images/burger-open.svg');
-  background-position: center;
-  background-color: transparent;
-  background-repeat: no-repeat;
-  background-size: 44px 44px;
-  cursor: pointer;
+.burger-menu__open {
+  display: none;
 }
 
 @media screen and (max-width: 830px) {
-  .burgerMenu__open {
+  .burger-menu__open {
+    display: block;
+    width: 44px;
+    height: 44px;
+    padding: 0;
+    border: none;
+    background-image: url('../../images/burger-open.svg');
+    background-position: center;
+    background-color: transparent;
+    background-repeat: no-repeat;
+    background-size: 44px 44px;
+    cursor: pointer;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .burger-menu__open {
     background-size: 40px 43px;
   }
 }
 
-.burgerMenu__close {
+.burger-menu__close {
   width: 44px;
   height: 44px;
   padding: 0;
+  margin-left: 5px;
   border: none;
   background-image: url('../../images/burger-close.svg');
-  background-position: center;
+  background-position: right;
   background-color: transparent;
   background-repeat: no-repeat;
-  background-size: 22px 22px;
+  background-size: auto;
   cursor: pointer;
+}
+
+@media screen and (max-width: 520px) {
+  .burger-menu__close {
+    background-position: top;
+  }
 }
