--- a/src/components/MoreButton/MoreButton.css
+++ b/src/components/MoreButton/MoreButton.css
@@ -1,4 +1,4 @@
-.moreButton {
+.more-button {
   width: 320px;
   height: 36px;
   margin: 50px auto 80px;
@@ -14,12 +14,12 @@
 }
 
 @media screen and (max-width: 520px) {
-  .moreButton {
+  .more-button {
     width: 240px;
   }
 }
 
-.moreButton:hover {
+.more-button:hover {
   opacity: 0.8;
   cursor: pointer;
 }
