--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -1,37 +1,37 @@
-.searchForm {
+.search-form {
   min-height: 224px;
   padding: 0 70px;
 }
 
 @media screen and (max-width: 830px) {
-  .searchForm {
+  .search-form {
     min-height: 232px;
     padding: 0 30px;
   }
 }
 
 @media screen and (max-width: 520px) {
-  .searchForm {
+  .search-form {
     min-height: 226px;
     padding: 0 10px;
   }
 }
 
-.searchForm__form {
+.search-form__form {
   margin: 80px 0 0;
   display: flex;
   justify-content: space-between;
 }
 
 @media screen and (max-width: 1080px) {
-  .searchForm__form {
+  .search-form__form {
     margin: 60px 0 0;
     flex-direction: column;
     align-items: center;
   }
 }
 
-.searchForm__input-wrap {
+.search-form__input-wrap {
   box-sizing: border-box;
   max-width: 932px;
   min-height: 48px;
@@ -44,12 +44,12 @@
 }
 
 @media screen and (max-width: 1080px) {
-  .searchForm__input-wrap {
+  .search-form__input-wrap {
     max-width: 100%;
   }
 }
 
-.searchForm__input {
+.search-form__input {
   font-family: inherit;
   background-color: inherit;
   border: none;
@@ -63,25 +63,25 @@
   line-height: 18px;
 }
 
-.searchForm__input:focus {
+.search-form__input:focus {
   outline: 2px solid #3ddc84;
 }
 
 @media screen and (max-width: 1080px) {
-  .searchForm__input {
+  .search-form__input {
     padding-left: 18px;
   }
 }
 
 @media screen and (max-width: 520px) {
-  .searchForm__input {
+  .search-form__input {
     padding-left: 16px;
     font-size: 11px;
     line-height: 18px;
   }
 }
 
-.searchForm__find-button {
+.search-form__find-button {
   min-width: 34px;
   height: 34px;
   background: none;
@@ -93,12 +93,12 @@
   transition: 0.3s opacity;
 }
 
-.searchForm__find-button:hover {
+.search-form__find-button:hover {
   opacity: 0.8;
 }
 
 @media screen and (max-width: 1080px) {
-  .searchForm__find-filter {
+  .search-form__find-filter {
     margin-top: 38px;
     margin-left: auto;
     margin-right: auto;
@@ -106,14 +106,14 @@
 }
 
 @media screen and (max-width: 520px) {
-  .searchForm__find-filter {
+  .search-form__find-filter {
     margin-top: 45px;
     font-size: 11px;
     line-height: 18px;
   }
 }
 
-.searchForm__line {
+.search-form__line {
   width: 100%;
   height: 1px;
   margin: 83px 0 10px;
@@ -122,13 +122,13 @@
 }
 
 @media screen and (max-width: 1080px) {
-  .searchForm__line {
+  .search-form__line {
     margin-top: 57px;
   }
 }
 
 @media screen and (max-width: 520px) {
-  .searchForm__line {
+  .search-form__line {
     margin-top: 44px;
   }
 }
