--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -43,13 +43,13 @@
 @media screen and (max-width: 830px) {
   .techs__title {
     margin-top: 90px;
-    font-size: 18px;
-    line-height: 22px;
   }
 }
 
 @media screen and (max-width: 520px) {
   .techs__title {
+    font-size: 18px;
+    line-height: 22px;
     margin-top: 70px;
   }
 }
@@ -57,7 +57,7 @@
 .techs__line {
   width: 100%;
   height: 1px;
-  margin: 23px 0 90px;
+  margin: 24px 0 90px;
   background-color: #dadada;
 }
 
@@ -113,6 +113,7 @@
   .techs__text {
     font-size: 12px;
     line-height: 18px;
+    letter-spacing: -4%;
   }
 }
 
@@ -126,7 +127,7 @@
 .techs__icons {
   width: 100%;
   max-width: 689px;
-  margin: 100px auto;
+  margin: 100px auto 100px;
   padding: 0;
   display: grid;
   grid-template-columns: repeat(7, 1fr);
@@ -136,8 +137,8 @@
 
 @media screen and (max-width: 830px) {
   .techs__icons {
-    margin-top: 83px;
-    margin-bottom: 90px;
+    margin-top: 85px;
+    margin-bottom: 88px;
     max-width: 648px;
   }
 }
