--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -51,6 +51,13 @@
   min-height: 100%;
 }
 
+.profile__wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100%;
+}
+
 .profile__form {
   width: 410px;
   margin: 0 auto;
