--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -8,3 +8,14 @@
   box-sizing: border-box;
   color: #fff;
 }
+
+.movies__empty-block {
+  width: 100%;
+  height: 66px;
+}
+
+@media screen and (max-width: 830px) {
+  .movies__empty-block {
+    display: none;
+  }
+}
