--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -71,6 +71,12 @@
   border-bottom: none;
 }
 
+@media screen and (max-width: 830px) {
+  .portfolio__item {
+    border-bottom: 1px solid #e6e6e6;
+  }
+}
+
 @media screen and (max-width: 520px) {
   .portfolio__item {
     padding-bottom: 19px;
@@ -128,22 +134,3 @@
     background-image: url('../../images/arrow-small.svg');
   }
 }
-/* 
-.portfolio__line {
-  width: 100%;
-  height: 1px;
-  margin: 9px 0 20px;
-  background-color: #424242;
-}
-
-@media screen and (max-width: 830px) {
-  .portfolio__line {
-    background-color: #e6e6e6;
-  }
-}
-
-@media screen and (max-width: 520px) {
-  .portfolio__line {
-    margin-top: 19px;
-  }
-} */
