--- a/src/components/SavedMovies/SavedMovies.css
+++ b/src/components/SavedMovies/SavedMovies.css
@@ -13,3 +13,14 @@
   width: 100%;
   height: 140px;
 }
+
+.saved-movies__empty-block-upper {
+  width: 100%;
+  height: 25px;
+}
+
+@media screen and (max-width: 830px) {
+  .saved-movies__empty-block-upper {
+    display: none;
+  }
+}
