--- a/src/components/InputInProfile/InputInProfile.css
+++ b/src/components/InputInProfile/InputInProfile.css
@@ -1,4 +1,13 @@
 .input-profile {
+  width: 100%;
+  height: 47px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.input-profile__wrap {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -6,7 +15,7 @@
 
 .input-profile__input {
   width: 100%;
-  height: 45px;
+  height: 14px;
   margin: 0;
   padding: 0;
   border: none;
@@ -18,6 +27,7 @@
   font-weight: 400;
   text-align: right;
   color: #fff;
+  box-shadow: 0 0 0 30px #202020 inset !important;
 }
 
 .input-profile__input:focus {
@@ -40,18 +50,17 @@
   color: #fff;
 }
 
-/**/
-
 .input-profile__input_type_error {
   color: #ee3465;
 }
 
 .input-profile__input-error {
-  padding-top: 10px;
+  padding: 3px 0;
   font-size: 10px;
   font-weight: 400;
   line-height: 12px;
   color: #ee3465;
   display: block;
   min-height: 10px;
+  text-align: end;
 }
