--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -77,13 +77,13 @@
 
 .movies-card__delete {
   width: 16px;
-  height: 16px;
+  height: 22px;
   padding: 0;
   border: none;
   cursor: pointer;
   background-color: transparent;
   background-image: url(../../images/delete.svg);
-  background-position: center;
+  background-position: top;
   background-repeat: no-repeat;
   background-size: 16px 16px;
   transition: 0.3s opacity;
