исправить баг с сообщением ничего не найдено

--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -53,3 +53,10 @@
   font-weight: 500;
   color: #ee3465;
 }
+
+@media screen and (max-width: 520px) {
+  .movies-card-list__message {
+    font-size: 20px;
+    line-height: 30px;
+  }
+}
